@@ -14,6 +14,12 @@ x2goclient (4.0.2.0-0x2go1) UNRELEASED; urgency=low
       from terminal on linux and mac.
     - If no user in session config, display system username in pass form.
 
+  [ Josh Lukens ]
+  * New upstream version (4.0.2.0):
+    - Switch to QNetworkAccessManager. Appropriately set content type
+      header to "application/x-www-form-urlencoded" for HTTP post
+      requests. (Fixes: #440, #138).
+
   [ Mike Gabriel ]
   * debian/control:
     + Build-depend on libssh-dev (>= 0.5.4-2).
